<resources>
    <string name="app_name">Doctor</string>
    <string name="splash_name">Human Care</string>
    <string-array name="Specialist_option">
        <item> হৃদরোগ \n Cardiology</item>
        <item> বক্ষব্যাধি \n Chest Diseases</item>
        <item> দাঁত \n Dentistry</item>
        <item> চর্ম \n Dermatology</item>
        <item> ডায়াবেটিস \n Diabetic</item>
        <item> খাদ্য ও পুষ্টি \n Dietetics</item>
        <item> হরমোন \n Endocrinology</item>
        <item> নাক, কান, গলা \n ENT</item>
        <item> পরিপাক তন্ত্র \n Gastroenterology</item>
        <item> মহিলা ও প্রসূতি \n Gynecology</item>
        <item> রক্ত রোগ \n Hematology</item>
        <item> লিভার, গলব্লাডার \n Hepatology</item>
        <item> মেডিসিন \n Medicine</item>
        <item> কিডনি \n Nephrology</item>
        <item> ব্রেন ও স্নায়ু \n Neurology</item>
        <item> নিউরো সার্জারি \n Neurosurgery</item>
        <item> নিউরো মেডিসিন \n Neuromedicine</item>
        <item> ক্যান্সার \n Oncology</item>
        <item> চোখ \n Ophthalmology</item>
        <item> হাড় \n Orthopedics</item>
        <item> শিশু ও নব্জাতক \n Paediatrics</item>
        <item> মানসিক \n Psychiatric</item>
        <item> ফুসফুস \n Pulmonology</item>
        <item> ফিজিওথেরাপি \n Physiotherapy</item>
        <item> বাত রোগ \n Rheumatology</item>
        <item> মূত্র \n Urology</item>
        <item> হার্ট সার্জারি \n Cardiac Surgery</item>
        <item> মলাশয় সার্জারি \n colorectal Surgery</item>
        <item> দন্ত সার্জারি \n Dental Surgery</item>
        <item> নাক, কান ও গলা সার্জারি \n ENT Surgery</item>
        <item> চক্ষু সার্জারি \n Eye Surgery</item>
        <item> জেনারেল সার্জারি \n General Surgery</item>
        <item> মহিলা ও প্রসুতি সার্জারি \n Gynecology Surgery</item>
        <item> হাড় সার্জারি \n Orthopedic Surgery</item>
        <item> শিশু সার্জারি \n Paediatric Surgery</item>
        <item> প্লাস্টিক সার্জারি \n Plastic Surgery</item>
        <item> ক্যান্সার সার্জারি \n Surgical Surgery</item>
        <item> কিডনি ও মুত্র সার্জারি \n Urology Surgery</item>
        <item> রক্তনালী সার্জারি \n Vascular Surgery</item>
    </string-array>
    <string name="next">Comeing soon</string>
    <string-array name="CardiacSurgery_name">
        <item>Dr A.k.m Hanif Chowdhury</item>
        <item>Dr Abdullah- Al- Mahmud</item>
        <item>Dr Md. Abu Jahid Basunia</item>
        <item>Dr Md. Hasanul Islam</item>
        <item>Dr Md. Rabindranath Barman</item>
        <item>Prof. Dr. A.k.m Hanif Chowdhury</item>
        <item>Prof. Dr. Nowyajes Farid</item>

    </string-array>
    <string-array name="CardiacSurgery_desc">
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,BCS (Helth),D-Card(DU),FCPS (Cardiology)</item>
        <item>MBBS(Dhaka), BCS (Helth),MD (Cardiology)</item>
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,D-Card(DU),WHO Fellow(India, Thailand) (Cardiology)</item>

    </string-array>
    <string-array name="CardiacSurgery_details">
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Annex Diagnostic Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Popular Diagnostic Center Two, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৫০০ টাকা \n পরের ভিজিটঃ ৩০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Apollo Diagnostic and Imaging Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Update Diagnostic Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Popular Diagnostic Center One, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Rangpur Community Medical College Hospital, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Prime Medical College and Hospital \n চেম্বারঃ Prime Medical College Hospital, Rangpur Sadar \n\n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>

    </string-array>
    <string-array name="CardiacSurgery_Phone">
        <item>01922-588061</item>
        <item>01944-447910</item>
        <item>01733-008087</item>
        <item>01971-555555</item>
        <item>01754-547097</item>
        <item>01717-292458</item>
        <item>01730-033110</item>

    </string-array>
    <string-array name="Cardiology_name">
        <item>Dr A.k.m Hanif Chowdhury</item>
        <item>Dr Abdullah- Al- Mahmud</item>
        <item>Dr Md. Abu Jahid Basunia</item>
        <item>Dr Md. Hasanul Islam</item>
        <item>Dr Md. Rabindranath Barman</item>
        <item>Prof. Dr. A.k.m Hanif Chowdhury</item>
        <item>Prof. Dr. Nowyajes Farid</item>

    </string-array>
    <string-array name="Cardiology_desc">
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,BCS (Helth),D-Card(DU),FCPS (Cardiology)</item>
        <item>MBBS(Dhaka), BCS (Helth),MD (Cardiology)</item>
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,MD (Cardiology)</item>
        <item>MBBS,D-Card(DU),WHO Fellow(India, Thailand) (Cardiology)</item>

    </string-array>
    <string-array name="Cardiology_details">
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Annex Diagnostic Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Popular Diagnostic Center Two, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৫০০ টাকা \n পরের ভিজিটঃ ৩০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Apollo Diagnostic and Imaging Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Update Diagnostic Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Popular Diagnostic Center One, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Rangpur Community Medical College Hospital, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>
        <item>\n কর্মস্থলঃ Prime Medical College and Hospital \n চেম্বারঃ Prime Medical College Hospital, Rangpur Sadar \n\n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>

    </string-array>
    <string-array name="Cardiology_Phone">
        <item>01922-588061</item>
        <item>01944-447910</item>
        <item>01733-008087</item>
        <item>01971-555555</item>
        <item>01754-547097</item>
        <item>01717-292458</item>
        <item>01730-033110</item>

    </string-array>
    <string-array name="ChestDr_name">
        <item>Dr A.k.m Shaheduzzaman (Rebel)</item>
        <item>Dr Monosontos Mollik</item>
    </string-array>
    <string-array name="ChestDr_desc">
        <item>MBBS,FCPS(Medicine), MD(Chest Disease)</item>
        <item>MBBS,DTCD(Dhaka), FCCP(Chest), FRSH(London)</item>
    </string-array>
    <string-array name="ChestDr_details">
        <item>কর্মস্থলঃ Asst. Prof(Dept of Medicine),Rangpur Medical College and Hospital \nচেম্বারঃ Popular Diagnostic Center One, Rangpur Sadar \n \nপ্রথম ভিজিটঃ ৬০০ টাকা \nপরের ভিজিটঃ ৪০০ টাকা</item>
        <item>কর্মস্থলঃ Prime Medical College and Hospital \nচেম্বারঃ Prime Medical College and Hospital \n \nপ্রথম ভিজিটঃ ৬০০ টাকা \nপরের ভিজিটঃ ৪০০ টাকা</item>

    </string-array>
    <string-array name="ChestDr_Phone">
        <item>01754-547097</item>
        <item>01730-033110</item>
    </string-array>
    <string-array name="ColorectalSurgery_name">
        <item>Dr A.k.m Hanif Chowdhury</item>
    </string-array>
    <string-array name="ColorectalSurgery_desc">
        <item>MBBS,MD (Cardiology)</item>

    </string-array>
    <string-array name="ColorectalSurgery_details">
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Annex Diagnostic Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৬০০ টাকা \n পরের ভিজিটঃ ৪০০ টাকা</item>

    </string-array>
    <string-array name="ColorectalSurgery_Phone">
        <item>01922-588061</item>
    </string-array>
    <string-array name="Dentistry_name">
        <item>Dr Md Abdul Wahad</item>
        <item>Dr Kanij Afrin Kanta</item>
        <item>Dr Md Mahmudul Islam(manik)</item>
        <item>Dr Musa Siddique (Jowel)</item>
        <item>Dr Sharifa Begum</item>
    </string-array>
    <string-array name="Dentistry_desc">
        <item>BDS(Dhaka),PGT (Midfrod), MRSH(London)</item>
        <item>BDS(Rajshahi),PGT (Dhaka)</item>
        <item>BDS(Rajshahi)</item>
        <item>BDS(Dental Surgery),MCPS (General Dentistry), FCPS(Facial Surgery)</item>
        <item>BDS, MS</item>

    </string-array>
    <string-array name="Dentistry_details">
        <item>\n কর্মস্থলঃ Rangpur Medical College and Hospital \n চেম্বারঃ Apollo Diagnostic and Imaging Center, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৪০০ টাকা \n পরের ভিজিটঃ ৩০০ টাকা</item>
        <item>\n কর্মস্থলঃ Prime Medical College and Hospital \n চেম্বারঃ Prime Medical College Hospital, Rangpur Sadar</item>
        <item>\n কর্মস্থলঃ Prime Medical College and Hospital \n চেম্বারঃ Prime Medical College Hospital, Rangpur Sadar</item>
        <item>\n কর্মস্থলঃ Associate Prof. and Head of Dept (Dept. of Facial Surgery), Rangpur Dental College\n চেম্বারঃ Rangpur Community Medical College Hospital, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৫০০ টাকা \n পরের ভিজিটঃ ৩০০ টাকা</item>
        <item>\n কর্মস্থলঃ Associate Prof. and Head of Dept (Dept. of Conservative), Rangpur Dental College\n চেম্বারঃ Rangpur Community Medical College Hospital, Rangpur Sadar \n \n প্রথম ভিজিটঃ ৪০০ টাকা \n পরের ভিজিটঃ ২০০ টাকা</item>
    </string-array>
    <string-array name="Dentistry_Phone">
        <item>01733-008087</item>
        <item>01730-033110</item>
        <item>01730-033110</item>
        <item>01717-292458</item>
        <item>01717-292458</item>
    </string-array>
    <string-array name="Dermatology_name">
        <item>Dr Latifa Akter (ety)</item>
        <item>Dr Md. Manzurul Karim (prince)</item>
        <item>Dr Md. Razu Ahmed</item>
        <item>Prof. Dr Md. Mahmudul Haque Sarkar</item>
    </string-array>
    <string-array name="Dermatology_desc">
        <item>MBBS, DDV(Dermatology)</item>
        <item>MBBS, MD(Dermatology)</item>
        <item>MBBS, DDV(DSMMU), MCPS(Dermatology)</item>
        <item>MBBS, DDV(BSMMU)</item>

    </string-array>
    <string name="option1">ডাক্তার খুজুন</string>
    <string name="option2">এ্যাম্বুলেন্স</string>
    <string name="option3">স্বাস্থ্য কেন্দ্র</string>
    <string name="option4">ডায়াগনস্টিক সেন্টার</string>
    <string name="option5">জরুরী ফোন</string>
    <string name="option6">নিকটস্থ ক্লিনিক</string>
    <string name="button_1">ডেঙ্গু জ্বরে করনীয়</string>
    <string name="button_2">জ্বর ও সাধারণ ব্যাথায় করনীয়</string>
    <string name="button_3">আগুনে পুড়লে</string>
    <string name="button_4">ডায়াবেটিস হলে</string>
    <string name="button_5">বুক জালাপোড়া ও বদ হজম হলে</string>
    <string name="button_6">পেট ফাঁপা ও গ্যাস হলে</string>
    <string name="button_7">ঘুম কম হলে</string>
    <string name="button_8">পুষ্টিহীনতা</string>
</resources>