<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test">


    <LinearLayout
        android:gravity="center"
        android:weightSum="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:padding="10dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:id="@+id/cardViewId1"
                        android:clickable="true"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <ImageView
                                android:layout_width="44dp"
                                android:layout_height="44dp"
                                android:src="@drawable/splash_logo" />

                            <TextView
                                style="@style/style_2"
                                android:layout_marginTop="10dp"
                                android:text="@string/option1"

                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:id="@+id/cardViewId2"
                        android:clickable="true"
                        app:cardBackgroundColor="@color/background"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_margin="12dp"
                        android:layout_width="0dp"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <ImageView
                                android:layout_width="44dp"
                                android:layout_height="44dp"
                                android:src="@drawable/ambulance"
                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                style="@style/style_2"
                                android:text="@string/option2"

                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:id="@+id/cardViewId3"
                        android:clickable="true"
                        app:cardBackgroundColor="@color/background"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_margin="12dp"
                        android:layout_width="0dp"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="44dp"
                                android:layout_height="44dp"
                                android:src="@drawable/hospital"
                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                style="@style/style_2"
                                android:gravity="center"
                                android:text="@string/option3"

                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:id="@+id/cardViewId4"
                        android:clickable="true"
                        app:cardBackgroundColor="@color/background"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_margin="12dp"
                        android:layout_width="0dp"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <ImageView
                                android:layout_width="44dp"
                                android:layout_height="44dp"
                                android:src="@drawable/school"
                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                style="@style/style_2"
                                android:text="@string/option4"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:id="@+id/cardViewId5"
                        android:clickable="true"
                        app:cardBackgroundColor="@color/background"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_margin="12dp"
                        android:layout_width="0dp"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <ImageView
                                android:layout_width="44dp"
                                android:layout_height="54dp"
                                android:src="@drawable/call"

                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                style="@style/style_2"
                                android:text="@string/option5"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:id="@+id/cardViewId6"
                        android:clickable="true"
                        app:cardBackgroundColor="@color/background"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_margin="12dp"
                        android:layout_width="0dp"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            >

                            <ImageView
                                android:layout_width="44dp"
                                android:layout_height="44dp"
                                android:src="@drawable/map"
                                />

                            <TextView
                                android:layout_marginTop="10dp"
                                style="@style/style_2"
                                android:text="@string/option6"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>